ala 7999 creo que lo pille

--- a/public/index.html
+++ b/public/index.html
@@ -37,7 +37,7 @@
    </main>
    <footer>
        <h5>
-           blabla bla bla bla
+           blabla bla bla bla bbla bala
        </h5>
    </footer>
     
